--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,8 @@
     <string name="app_name">CrazyPuzzle</string>
     <string name="your_puzzle">Your Puzzle</string>
     <string name="btn_upload">Upload Image</string>
+    <string name="btn_create_puzzle">Create a Puzzle</string>
+    <string name="lbl_preview">Preview</string>
+    <string name="lbl_upload">Upload</string>
+    <string name="placeholder_upload_image">Upload an Image to see the Preview!</string>
 </resources>
