MainActivity validate whether Image was uploaded

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,6 @@
     <string name="lbl_preview">Preview</string>
     <string name="lbl_upload">Upload</string>
     <string name="placeholder_upload_image">Upload an Image to see the Preview!</string>
+    <string name="title_activity_upload_image">UploadImage</string>
+    <string name="snackbar_image_not_uploaded">You have to choose an Image!</string>
 </resources>
